[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerInformationBackground.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/ActiveIngredientsPanel/ActiveIngredientsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerInfoPanel.gd" type="Script" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerNameAndPicPanel/TowerNameAndPicPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/TargetingPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerInfoPanel_ExtraSlot.gd" type="Script" id=6]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/PanelSeparator.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TowerStatsPanel/TowerStatsPanel.tscn" type="PackedScene" id=9]

[node name="TowerInfoPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 120.0
margin_bottom = 440.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 120.0
margin_bottom = 440.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TowerNameAndPicPanel" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 7.0
margin_right = 113.0
margin_bottom = 92.0
size_flags_horizontal = 6
custom_constants/margin_top = 10

[node name="TargetingPanel" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_left = 1.0
margin_top = 92.0
margin_right = 119.0
margin_bottom = 116.0
size_flags_horizontal = 6

[node name="TowerSpecificSlot" type="MarginContainer" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 120.0
margin_bottom = 124.0
mouse_filter = 2
custom_constants/margin_top = 8
script = ExtResource( 6 )

[node name="Separator" type="MarginContainer" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 120.0
margin_bottom = 137.0
custom_constants/margin_top = 8

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Separator"]
margin_left = 3.0
margin_top = 8.0
margin_right = 117.0
margin_bottom = 13.0
size_flags_horizontal = 6
texture = ExtResource( 7 )

[node name="TowerStatsPanel" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_top = 137.0
margin_right = 120.0
margin_bottom = 205.0
custom_constants/margin_top = 8

[node name="ActiveIngredientsPanel" parent="VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_left = 10.0
margin_top = 205.0
margin_right = 110.0
margin_bottom = 424.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 8

[node name="HeatModuleExtraSlot" type="MarginContainer" parent="VBoxContainer"]
margin_top = 205.0
margin_right = 120.0
margin_bottom = 213.0
custom_constants/margin_bottom = 8
script = ExtResource( 6 )

[node name="EnergyModuleExtraSlot" type="MarginContainer" parent="VBoxContainer"]
margin_top = 213.0
margin_right = 120.0
margin_bottom = 221.0
mouse_filter = 2
custom_constants/margin_bottom = 8
script = ExtResource( 6 )

[connection signal="show_extra_tower_info" from="VBoxContainer/TowerNameAndPicPanel" to="." method="_on_TowerNameAndPicPanel_show_extra_tower_info"]
